# googlecmd

./: CHANGELOG.md  README.md  pyproject.toml
google/: __init__.py  __main__.py  googlecmd.py
googlecmd/: __init__.py  __main__.py  googlecmd.py
